src/static/jeeqs.css
body {
    font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif; /* Open Sans is a Google Web font*/
    font-size: 14px;
}

#userInfo {
    float: right;
    background-color: #f0f8ff;
    height: 45px;
    font-size: 16px;
    /*font-family: sans-serif;*/
}

p {
    margin: 0.5em;
    /*font-family: arial;*/
}

a img {
    border: none;
}

.prompt, #output {
    width: 80%;
    border: 1px solid silver;
    background-color: #f5f5f5;
    font-size: 10pt;
    margin: 0.5em;
    padding: 0.5em;
    padding-right: 0em;
    overflow-x: hidden;
}

#toolbar {
    margin-left: 0.5em;
    padding-left: 0.5em;
}

.message {
    color: #8AD;
    font-weight: bold;
    font-style: italic;
}

.error {
    color: #F44;
}

.submission-placeholder {
    background: #f0f8ff;
    padding: 5px;
}

.ui-widget-content {
    background: white;
}

.codehilite {
    background: #EED;
}

.recent-jeeqs {
    font-size: small;
    /*font-family: monospace;*/
}

#wmd-input {
    font-size: small;
    font-family: sans-serif;
}

.submission-feedback {
!important;
}

div.submission-feedback .ui-state-active.correct_label {
    background: green
}

div.submission-feedback .ui-state-active.incorrect_label {
    background: #ff5967
}

div.submission-feedback .ui-state-active.flag_label {
    background: grey;
}

#column1 > div {
    float: left;
    /* Floating causes width to shrink*/
    width: 100%;
}

.jeeqser-value {
    margin-left: 20px;
}

.current_profile_picture {
    background-color: green;
    padding: 5px;
}

.selectable_profile_picture {
    cursor: pointer;
}

.badge_links {
    text-decoration: none;
    cursor: none;
}

.shift-right-2 {
    margin-left: 2px;
}

.font-normal {
    font-weight: normal;
}

.deeplink:hover {
    background-color: #0074cc;
}

